[metadata]
name = hmile-pkg-theophanedroid
version = 0.4.2
author = theophanedroid
author_email = theodesile@gmail.com
description = Python 3.x module treat financial data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theophane-droid/8miles-render
project_urls =
    Bug Tracker = https://github.com/theophane-droid/8miles-render/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .